--- a/Resources/views/Emails/Contest-client-email.txt.twig
+++ b/Resources/views/Emails/Contest-client-email.txt.twig
@@ -10,7 +10,10 @@
 
 {% if fields %}
 {% for field in fields %}
+    {% if field.label == 'Photo link' %}
+    {% else %}
     {{field.label}}:  {{field.value | striptags}}
+{% endif %}
 {% endfor %}
 {% endif %}
 {% endblock %}
