--- a/Resources/views/forms-navigation.html.twig
+++ b/Resources/views/forms-navigation.html.twig
@@ -15,10 +15,11 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-shopify-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li {% if formMenu == 'setup' %}class="active"{%endif %} ><a href="/shopify/forms/">Forms Setup</a></li>
-				<li {% if formMenu == 'communications' %}class="active"{%endif %} ><a href="/shopify/forms/communications/">Website Communications</a></li>
+
+				{# <li {% if formMenu == 'communications' %}class="active"{%endif %} ><a href="/shopify/forms/communications/">Website Communications</a></li>#}
 				<li {% if formMenu == 'rma' %}class="active"{%endif %} ><a href="/shopify/forms/rma/">Product Returns</a></li>
-				<li {% if formMenu == 'warranty' %}class="active"{%endif %} ><a href="/shopify/forms/warranty/">Product Warranty</a></li>	
+				<li {% if formMenu == 'warranty' %}class="active"{%endif %} ><a href="/shopify/forms/warranty/">Warranty Registrations</a></li>
+				<li {% if formMenu == 'setup' %}class="active"{%endif %} ><a href="/shopify/forms/">Setup</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
