Updated Controller ShopifyFormsController * Added sort for date on rma and warranty index Desc.
Updated Controller ShopifyProxyController
* Removed Image out of Warranty Form buidler.
* added attr min="1" to quantity for builder.

Update WarrantyItem Entity
* Added min="1" server side validation

Updated twig templates
* minor changes text string values.
* Updated date for more human readable.

--- a/Resources/views/ShopifyForms/product-index.html.twig
+++ b/Resources/views/ShopifyForms/product-index.html.twig
@@ -37,7 +37,7 @@ $(function(){
                             {{entry.session | slice(24,32) }}
                         </a>
                     </td>
-                    <td>{{entry.createDate | date('d/m/y')}}</td>
+                    <td>{{entry.createDate | date('M n, Y')}}</td>
 
 					<td>
 
@@ -67,7 +67,7 @@ $(function(){
                         {% if entry.purchaseDate %}
 
                         <div class="product-purchase-info">
-                            {% if entry.purchaseDate  %}<div>Purchase Date: {{entry.purchaseDate | date('d/m/y')}}</div>{% endif %}
+                            {% if entry.purchaseDate  %}<div>Purchase Date: {{entry.purchaseDate | date('M n, Y')}}</div>{% endif %}
                             {% if entry.purchaseLocation  %}<div>Purchase Location: {{entry.purchaseLocation}}</div>{% endif %}
                             {% if entry.purchaseReceipt  %}<div>Purchase Reciept: {{entry.purchaseReceipt}}</div>{% endif %}
                         </div>
@@ -80,7 +80,7 @@ $(function(){
                     <td >
 
                             {% if entry.status == 'Created' %}In Progress{% else %}Submitted{% endif %}
-                        
+
                     </td>
                 </tr>
 				{% endfor %}
