Updated Landingpage Templates.

--- a/Resources/views/Default/home.html.twig
+++ b/Resources/views/Default/home.html.twig
@@ -54,7 +54,7 @@
 			{% if enables.productReturn == 'true' %}<a href="/shopify/forms/">{% endif %}
 				<div class="well" style="text-align: center; {% if enables.productReturn != 'true' %}color: #ccc;{% endif %}">
 					<div ><i class="fa fa-envelope-o fa-4x"></i></div>
-					<h2>Product Returns</h2>
+					<h2>Product Returns<div>Warranty Registration</div></h2>
 					<p></p>
 				</div>
 			{% if enables.productReturn == 'true' %}</a>{% endif %}
