--- a/Resources/views/ShopifyLandingPage/formPPC.html.twig
+++ b/Resources/views/ShopifyLandingPage/formPPC.html.twig
@@ -14,6 +14,7 @@
 	<div>
 		<div style="text-align: right">
 			{{form_widget(form.save,{'attr' : {'class' : 'btn btn-success btn-lg'}})}}
+			<a class="btn btn-primary btn-lg" style="margin-right: 12px;" href="/shopify/lp"><i class="fa fa-hand-o-left" aria-hidden="true"></i> </a>
 		</div>
 		
 		<!-- Nav tabs -->
