Updating Landing page templates to accomodate for Partner store. **Partner store however might be removed from this repo to its own app.

--- a/Resources/views/ShopifyLandingPage/publicPPC.html.twig
+++ b/Resources/views/ShopifyLandingPage/publicPPC.html.twig
@@ -13,7 +13,7 @@
                             </div>
                             <div class="col-md-8 col-sm-9">
                                 <div class="lp-site-caption">
-                                    <a data-ga-label="visit-website" href="{{formGlobals.website}}" target="_blank" class="btn btn-primary ">Visit Website</a>
+                                    <a data-ga-label="visit-website" href="{{formGlobals.website}}"  class="btn btn-primary ">Visit Website</a>
                                 </div>
                             </div>	
                         </div>
