--- a/Resources/views/ShopifyLandingPage/index.html.twig
+++ b/Resources/views/ShopifyLandingPage/index.html.twig
@@ -8,7 +8,7 @@
 			<tr>
 				<th>Company</th>
 				<th>Type</th>
-				<th>Template</th>
+				<th>URL</th>
 				<th>Title</th>
 				<th>Description</th>				
 				<th>Status</th>
@@ -23,12 +23,12 @@
 			<tr>
 				<td>{{lp.company}}</td>
 				<td>{{lp.type | upper}}</td>
-				<td>{{lp.template}}</td>
+				<td>{{storeUrl}}/{{lp.permalink}}</td>
 				<td>{{lp.title}}</td>
 				<td>{{lp.summary}}</td>
 				<td>{{lp.status}}</td>
 				<td><a href="/shopify/lp/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-pencil-square-o"></i> Edit</a></td>
-				<td><a href="https://{{lp.shop}}/tools/fg/lp/{{lp.permalink}}/" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i> View</a></td>
+				<td><a href="{{storeUrl}}/{{proxyUrl}}/lp/{{lp.permalink}}/" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i> View</a></td>
 				{# <td><a href="/shopify/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-line-chart"></i> Stats</a></td> #}
 				
 			</tr>	
@@ -40,6 +40,9 @@
 		<h3 style="padding: 0; margin: 0 0 18px;">Create New Landing Page </h3>		
 		<a href="/shopify/lp/qr/0/" class="btn btn-success btn-lg">New QR</a>
 		<a href="/shopify/lp/ppc/0/" class="btn btn-success btn-lg">New PPC</a>
+		<a href="/shopify/lp/ps/0/" class="btn btn-success btn-lg">New Partner Store</a>
+		
+		
 	</div>
 
 
